# PT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  run_my_pc.sh  run_triolith.sh
Data_Analysis/: dataanaylysis.py
Matlab/: Analysis.m  ac.m  bootstrap1.m  bootstrap2.m  dataerror.m  ladder.m  my_bootstrap.m  my_bootstrap2.m  transform.m
Matlab/Ising/: c_ising.m  cksq.m  dos_ising.m  logZ_ising.m  sksq.m  thermo_ising.m  u_ising.m
backup/: class_model_J1J2.h
bash_scripts/createInput/: createInput.py  createInput.sh  dummy_new
bash_scripts/mode/: run_linux.sh  run_macosx.sh  run_my_pc.sh  run_triolith.sh  run_triolith_debug.sh
cmake/: Find_dont_install_INTELMKL.cmake  Find_or_install_EIGEN3.cmake
cmake/download_scripts/eigen3/: CMakeLists.txt
cmake/download_scripts/hdf5/: CMakeLists.txt
cmake/download_scripts/tmp/eigen3/: CMakeCache.txt  Makefile  cmake_install.cmake  log_build.txt
cmake/download_scripts/tmp/hdf5/: CMakeCache.txt  Makefile  cmake_install.cmake  log_build.txt
cmake_modules/: Fetch_HDF5.cmake
input/: input.cfg
source/: PT.cpp  PT.h  class_PT_groundstate.cpp  class_PT_groundstate.h  class_PT_input.cpp  class_PT_input.h  class_PT_ladder.cpp  class_PT_ladder.h  class_PT_output.cpp  class_PT_output.h  class_PT_print_data.cpp  class_PT_print_data.h  class_PT_thermo.cpp  class_PT_thermo.h  class_PT_worker.cpp  class_PT_worker.h  class_model.cpp  class_model.h  class_model_J1J2.cpp  class_model_J1J2.h  class_tic_toc.cpp  class_tic_toc.h  nmspc_PT_constants.cpp  nmspc_PT_constants.h  nmspc_PT_counters_timers.h  nmspc_PT_parallel_algorithms.cpp  nmspc_PT_parallel_algorithms.h  nmspc_math_algorithms.cpp  nmspc_math_algorithms.h  nmspc_mpi_extensions.h  nmspc_random_numbers.cpp  nmspc_random_numbers.h  thermodynamics.cpp  thermodynamics.h
source/IO/: class_custom_cout.cpp  class_custom_cout.h  class_file_reader.h  class_hdf5.h  class_hdf5_dataset_buffer.cpp  class_hdf5_dataset_buffer.h  class_hdf5_file.cpp  class_hdf5_file.h  class_hdf5_file_mpi.cpp  class_hdf5_model_table.cpp  class_hdf5_model_table.h  class_hdf5_model_table_mpi.cpp  class_hdf5_table_buffer.cpp  class_hdf5_table_buffer.h  class_hdf5_table_buffer_mpi.cpp  class_hdf5_thermo_table.cpp  class_hdf5_thermo_table.h  class_hdf5_thermo_table_mpi.cpp  class_measurement_buffers.h
source/models/: class_model.cpp  class_model.h
source/sim_parameters/: n_sim_settings.cpp  n_sim_settings.h
